name:                pure-random-pcg
version:             0.7.0.0
synopsis:
homepage:            github.com/grumply/pure-random-pcg
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:
    base >= 4.8 && < 5,
    random,
    vector,
    primitive

  exposed-modules:
    Pure.Random
    Pure.Random.Distributions
    Pure.Random.PCG
    Pure.Random.PCG.Internal

  hs-source-dirs: src

  default-language: Haskell2010
