name:                pure-random-pcg
version:             0.8.0.0
homepage:            purehs.org/doc/pure-random-pcg
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-random-pcg.git

library
  build-depends:
    base,
    random,
    vector,
    primitive

  exposed-modules:
    Pure.Random
    Pure.Random.Distributions
    Pure.Random.PCG
    Pure.Random.PCG.Internal

  hs-source-dirs: src

  default-language: Haskell2010
